# websocket_trading_engine

./: .gitignore  CMakeLists.txt
include/: Order.hpp  Orderbook.hpp  Websocket.hpp  enums.hpp  orderlist.hpp  price_level.hpp  types.hpp
include/orderbook_layers/: order.hpp  orderbook.hpp  orderlist.hpp  price_level.hpp  pricelevels.hpp
src/: main.cpp  orderbook.cpp
